@@ -5,10 +5,10 @@ default: compile run
 compile:
 	@for f in *.ml; do \
 	  $(OCAMLC) -w a -o `basename $$f ml`bytecode $$f; \
-	  $(OCAMLOPT) -w a -o `basename $$f ml`native $$f; \
+	  test -z "$(BYTECODE_ONLY)" && $(OCAMLOPT) -w a -o `basename $$f ml`native $$f || true; \
 	done
 	@if [ ! `grep -c HAS_STACK_OVERFLOW_DETECTION ../../../config/s.h` ]; then \
-	  rm -f stackoverflow.byte stackoverflow.native; \
+	  test -z "$(BYTECODE_ONLY)" && rm -f stackoverflow.byte stackoverflow.native || true; \
 	fi
 
 run:
@@ -17,11 +17,13 @@ run:
 	  printf " ... testing '$$f':"; \
 	  (./$$f > $$f.result 2>&1; true); \
 	  $(DIFF) $$f.reference $$f.result > /dev/null || (echo " => failed" && exit 1) && echo " => passed"; \
-	  printf " ... testing '`basename $$f bytecode`native':"; \
-	  (./`basename $$f bytecode`native > `basename $$f bytecode`native.result 2>&1; true); \
-	  $(DIFF) `basename $$f bytecode`native.reference `basename $$f bytecode`native.result > /dev/null || (echo " => failed" && exit 1) && echo " => passed"; \
+	  if [ -z "$(BYTECODE_ONLY)" ]; then \
+	    printf " ... testing '`basename $$f bytecode`native':"; \
+	    (./`basename $$f bytecode`native > `basename $$f bytecode`native.result 2>&1; true); \
+	    $(DIFF) `basename $$f bytecode`native.reference `basename $$f bytecode`native.result > /dev/null || (echo " => failed" && exit 1) && echo " => passed"; \
+	  fi; \
 	done
-	
+
 promote: defaultpromote
 
 clean: defaultclean
